# stress-score

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/static/: style.css
api/templates/: base.html  session.html  session_list.html
configs/: baseline.yaml  calibration.yaml  features.yaml  preprocess.yaml  score_spec.yaml  wesad_intervals.csv
data/interim/: _inventory.csv  baseline_stats.parquet  wesad_window_labels.parquet  windows_index.csv
data/interim/sync/: biostress_nan_acc.parquet  biostress_nan_bvp.parquet  biostress_nan_eda.parquet  biostress_nan_hr.parquet  biostress_nan_temp.parquet  wesad_S10_acc.parquet  wesad_S10_bvp.parquet  wesad_S10_eda.parquet  wesad_S10_hr.parquet  wesad_S10_temp.parquet  (+70 more)
data/processed/: _band_counts.csv  _scores_by_subject.csv  _top5_windows.csv  features.parquet  scores_v01.parquet  scores_v02_calibrated.parquet  scores_v03_isotonic.parquet
models/: isotonic_v1.joblib
scripts/: 01_fetch_kaggle.py  01_validate_spec.py  02_inventory_raw.py  03_sync_resample.py  04_extract_features.py  05_build_baseline.py  06_score_from_features.py  07_plot_examples.py  07_quick_report.py  08_calibrate_distributional.py  09_infer_e4_session.py  10_session_report.py  11_make_wesad_label_intervals.py  12_wesad_window_labels.py  13_calibrate_isotonic.py  16_batch_score.py  17_cohort_summary.py  18_export_excel.py  19_pipeline_cohort.py  20_run_api.ps1  22_smoke_check.py
src/stresscore/: __init__.py  cli.py
src/stresscore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: start_api.bat
(+142 files in other folders)
